Fix table extra margin

--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -9,5 +9,8 @@
         th svg.fa-down-long {
             color: #333;
         }
+        p {
+            margin: 0;
+        }
     }
 }
